@@ -58,11 +58,11 @@ alias cp='env cp -iv'
 alias mv='env mv -iv'
 alias rm='env rm -Iv --preserve-root'
 alias ln='env ln -iv'
-alias chown='env chown --preserve-root'
+alias chown='env chown -v --preserve-root'
 alias own='chown'
-alias chmod='env chmod --preserve-root'
+alias chmod='env chmod -v --preserve-root'
 alias mod='chmod'
-alias chgrp='env chgrp --preserve-root'
+alias chgrp='env chgrp -v --preserve-root'
 alias grp='chgrp'
 # }
 # 常用指令 {
@@ -84,7 +84,7 @@ alias startx='export LANG=zh_CN.UTF-8 && env startx'
 alias mkdir='env mkdir -p -v'
 alias df='env df -h'
 alias du='env du -ch'
-alias ping='env ping -c 20 -i 0.2 -q'
+alias ping='env ping -c 20 -i 0.2'
 # 快速关机、重启
 alias poweroff='env sudo env shutdown -h 0'
 alias halt='poweroff'
